[Fix] Fixed card width and bottom margin to make sure it renders properly on mobile devices

--- a/src/app/components/project-detail/project-detail.component.scss
+++ b/src/app/components/project-detail/project-detail.component.scss
@@ -25,7 +25,7 @@
 
         .project-brief {
             .card {
-                width: 450px;
+                width: 100%;
                 color: #7c7c7c;
                 font-size: 16px;
                 -webkit-box-shadow: 5px 5px 20px 1px #eee;
